--- a/App/frontend/src/CSS/default.css
+++ b/App/frontend/src/CSS/default.css
@@ -1,4 +1,5 @@
 .buttonBox li{
+    box-sizing: border-box; /* 최대 사이즈 고정*/
     width: 160px; /* 너비 설정 */
     height: 48px; /* 높이 설정 */
     flex-shrink: 0; /* flex 아이템이 축소되지 않도록 설정 */
@@ -7,10 +8,14 @@
     list-style-type: none; /* 기본 리스트 스타일 제거 */
     display: flex; /* Flexbox 모델 적용 */
     align-items: center; /* 내부 아이템을 세로 중앙으로 정렬 */
-    justify-content: center; /* 내부 아이템을 가로 중앙으로 정렬 */
-    margin: 8px; /* 주변 마진 설정 */
+    justify-content: left; /* 내부 아이템을 가로 중앙으로 정렬 */
+    margin: 8px; 
+    padding: 0px 10px; 
+}
+.buttonBox li img {
+    margin-right: 4px; /* 이미지 요소에만 적용 */
 }
 
 .buttonBox {
-    
+    padding-left: 9px;
 }
